ProjektEntity joint jetzt StatusEntity.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,11 @@ logging.level.org.atmosphere = warn
 # For more information https://vaadin.com/docs/v14/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
 # vaadin.whitelisted-packages= org/vaadin/example
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/projektantrag
+spring.datasource.url=jdbc:mariadb://localhost:3306/projektantragtest
 spring.datasource.username=projekt
 spring.datasource.password=projekt2020
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
